--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "node -e \"require('fs').copyFileSync('.env.example', '.env.local')\""
+    "postinstall": "node -e \"require('fs').copyFileSync('.env.example', '.env.local')\" || echo Skipped env copy"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
