--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "clsx": "^2.1.1",
+    "full-icu": "^1.5.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
