--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "full-icu": "^1.5.0",
+    "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
